<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">


        <ImageButton
            android:id="@+id/bt_back_to_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/bt_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/tv_title_compression"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/tv_result_result"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout_images"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:tabMode="fixed"
            app:tabGravity="fill"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_compression">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_compressed"
                android:text="@string/img_result_compressed"
                android:layout_height="0dp"
                android:layout_width="0dp"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_original"
                android:text="@string/img_result_original"
                android:layout_height="0dp"
                android:layout_width="0dp"/>

        </com.google.android.material.tabs.TabLayout>

        <ImageView
            android:id="@+id/iv_img"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/iv_result_img_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tab_layout_images" />


        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_img">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tv_informations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="0dp"
                    android:text="@string/tv_result_infos"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_taux"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="0dp"
                    android:text="@string/tv_result_compression_rate"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_psnr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="0dp"
                    android:text="@string/tv_result_PSNR"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/tv_old_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="0dp"
                    android:text="@string/tv_result_output_size"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_new_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="0dp"
                    android:text="@string/tv_result_input_size"
                    android:textSize="18sp" />




            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_compress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="#2E2E2E"
            android:text="@string/mb_result_save"
            android:textSize="20sp"
            app:cornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


